--- a/pc/01_UI_ADHPAaM01.html
+++ b/pc/01_UI_ADHPAaM01.html
@@ -79,7 +79,7 @@
                                             </div>
 
                                             <div class="step_cont">
-                                                <h3 class="t2_sb mb16">신청 및 참여 절차</h3>
+                                                <h3 class="t2_sb">신청 및 참여 절차</h3>
                                                 <div class="step_cont_area">
                                                     <ol>
                                                         <li class="li_step01">
@@ -126,7 +126,7 @@
 
 
                                             <div class="uniporg_cont">
-                                                <h3 class="t2_sb m-b16">운영 대학 및 프로그램</h3>
+                                                <h3 class="t2_sb">운영 대학 및 프로그램</h3>
                                                 <article class="box_form_content">
                                                     <form id="searchFrm" name="searchFrm" action="jobPsyExamList.do" method="post" class="reset_area">
                                                         <input type="hidden" id="pageIndex" name="pageIndex" value="1">
