--- a/pc/23_UI_ADHPAbS11.html
+++ b/pc/23_UI_ADHPAbS11.html
@@ -59,7 +59,7 @@
 
                                         <div class="donepage">
                                             <div class="done_notice">
-                                                <figure class="mb24"><img src=""><img src="./images/mypage/ico80_chk_green.svg"></figure>
+                                                <figure class="mb24"><img src="./images/mypage/ico80_chk_green.svg"></figure>
                                                 <p class="h2_sb">참여신청서 제출이 완료되었습니다.</p>
                                             </div>
 
