--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                     <td></td>
                     <td>운영대학 목록 - 프로그램 조회 팝업</td>
                     <td>UI_ADHPAaM02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/02_UI_ADHPAaM02.html" target="_blank">PC</a>
-                        <a href="./mobile/02_UI_ADHPAaM02.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/02_UI_ADHPAaM02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -136,11 +136,11 @@
                     <td></td>
                     <td>참여신청서 - 등록</td>
                     <td>UI_ADHPAbS03</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/05_UI_ADHPAbS03.html" target="_blank">PC</a>
-                        <a href="./mobile/05_UI_ADHPAbS03.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/05_UI_ADHPAbS03.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -392,11 +392,11 @@
                     <td></td>
                     <td>상담이력 - 목록 없음</td>
                     <td>UI_ADHPAeM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/21_UI_ADHPAeM01.html" target="_blank">PC</a>
-                        <a href="./mobile/21_UI_ADHPAeM01.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/21_UI_ADHPAeM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -408,11 +408,11 @@
                     <td></td>
                     <td>상담이력 - 목록 있음</td>
                     <td>UI_ADHPAeM02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/22_UI_ADHPAeM02.html" target="_blank">PC</a>
-                        <a href="./mobile/22_UI_ADHPAeM02.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/22_UI_ADHPAeM02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -424,11 +424,11 @@
                     <td></td>
                     <td>완료 페이지 - 신청서 제출 완료</td>
                     <td>UI_ADHPAbS11</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/23_UI_ADHPAbS11.html" target="_blank">PC</a>
-                        <a href="./mobile/23_UI_ADHPAbS11.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/23_UI_ADHPAbS11.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -440,11 +440,11 @@
                     <td></td>
                     <td>완료 페이지 - 회수 완료</td>
                     <td>UI_ADHPAbS12</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/24_UI_ADHPAbS12.html" target="_blank">PC</a>
-                        <a href="./mobile/24_UI_ADHPAbS12.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/24_UI_ADHPAbS12.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -456,11 +456,11 @@
                     <td></td>
                     <td>완료 페이지 - 삭제 완료</td>
                     <td>UI_ADHPAbS13</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/25_UI_ADHPAbS13.html" target="_blank">PC</a>
-                        <a href="./mobile/25_UI_ADHPAbS13.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/25_UI_ADHPAbS13.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -472,11 +472,11 @@
                     <td></td>
                     <td>완료 페이지 - 수정 완료</td>
                     <td>UI_ADHPAbS14</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/26_UI_ADHPAbS14.html" target="_blank">PC</a>
-                        <a href="./mobile/26_UI_ADHPAbS14.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/26_UI_ADHPAbS14.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -488,11 +488,11 @@
                     <td></td>
                     <td>완료 페이지 - 신청 완료</td>
                     <td>UI_ADHPAbS15</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/27_UI_ADHPAbS15.html" target="_blank">PC</a>
-                        <a href="./mobile/27_UI_ADHPAbS15.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/27_UI_ADHPAbS15.html" target="_blank">MO</a>
                     </td>
                 </tr>
             </tbody>
