--- a/pc/24_UI_ADHPAbS12.html
+++ b/pc/24_UI_ADHPAbS12.html
@@ -59,7 +59,7 @@
 
                                         <div class="donepage">
                                             <div class="done_notice">
-                                                <figure class="mb24"><img src=""><img src="./images/mypage/ico80_chk_green.svg"></figure>
+                                                <figure class="mb24"><img src="./images/mypage/ico80_chk_green.svg"></figure>
                                                 <p class="h2_sb">참여신청서 제출이 완료되었습니다.</p>
                                                 <p class="b1_r">참여신청서 제출을 취소하거나, 수정 후에 다시 제출할 수 있습니다.</p>
                                             </div>
