--- a/mobile/02_UI_ADHPAaM02.html
+++ b/mobile/02_UI_ADHPAaM02.html
@@ -496,7 +496,7 @@
                                         </ul>
                                     </div>
                                     <div class="paging"></div>
-                                </form>
+                                </section>
                             </div>
                         </div>
                     </div>
