--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/07_UI_ADHPAbS05.html" target="_blank">PC</a>
-                        <a href="./mobile/07_UI_ADHPAbS05.html" target="_blank">MO</a>
+                        <a href="./mobile/07_UI_ADHPAbS05.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -264,11 +264,11 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 목록 없음</td>
                     <td>UI_ADHPAcM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/13_UI_ADHPAcM01.html" target="_blank">PC</a>
-                        <a href="./mobile/13_UI_ADHPAcM01.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/13_UI_ADHPAcM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -280,11 +280,12 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 목록 있음</td>
                     <td>UI_ADHPAcM02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/14_UI_ADHPAcM02.html" target="_blank">PC</a>
-                        <a href="./mobile/14_UI_ADHPAcM02.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/14_UI_ADHPAcM02.html" target="_blank">MO</a>
+                        <a href="./mobile/14_UI_ADHPAcM02_pop.html" target="_blank">MO-Pop</a>
                     </td>
                 </tr>
                 <tr>
