--- a/mobile/14_UI_ADHPAcM02_pop.html
+++ b/mobile/14_UI_ADHPAcM02_pop.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>02. 운영대학 목록 - 프로그램 조회 팝업</title>
+        <title>14. 프로그램 신청 - 목록 있음 (팝업)</title>
         <script src="../mobile/include/js/head.js"></script>
         <script src="../mobile/include/js/mobile-ui-util.js"></script>
         <script src="../mobile/include/js/mobile-ui.js"></script>
