--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 신청</td>
                     <td>UI_ADHPAcS03</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/15_UI_ADHPAcS03.html" target="_blank">PC</a>
-                        <a href="./mobile/15_UI_ADHPAcS03.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/15_UI_ADHPAcS03.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
