--- a/mobile/16_UI_ADHPAcS04.html
+++ b/mobile/16_UI_ADHPAcS04.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>15. 프로그램 신청 - 신청</title>
+        <title>16. 프로그램 신청 - 조회</title>
         <script src="../mobile/include/js/head.js"></script>
         <script src="../mobile/include/js/mobile-ui-util.js"></script>
         <script src="../mobile/include/js/mobile-ui.js"></script>
@@ -117,7 +117,7 @@
                             </div>
                             <div class="apply_btn_box mt24">
                                 <button type="button" class="btn type03 large">목록</button>
-                                <button type="button" class="btn type01 fill large">신청</button>
+                                <button type="button" class="btn type01 fill large">신청 취소</button>
                             </div>
                         </div>
                     </div>
