--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 조회</td>
                     <td>UI_ADHPAcS04</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/16_UI_ADHPAcS04.html" target="_blank">PC</a>
-                        <a href="./mobile/16_UI_ADHPAcS04.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/16_UI_ADHPAcS04.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
