--- a/pc/20_UI_ADHPAdS04.html
+++ b/pc/20_UI_ADHPAdS04.html
@@ -253,7 +253,7 @@
                                         </div>
 
                                         <div class="box_end_wrap" role="region" aria-label="제출 정보 영역">
-                                            <div class="btn_box mt40" id="surveyButtonWrap">
+                                            <div class="btn_box mt40" >
                                                 <button type="button" class="btn big type02" aria-label="목록 페이지로 이동" onclick="goToList()">목록</button>
                                                 <button type="button" class="btn big fill type01" id="submitSurveyBtn" onclick="submitSurvey()">제출</button>
                                             </div>
