--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
                     <td></td>
                     <td>참여신청서 - 조회</td>
                     <td>UI_ADHPAbS04</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/06_UI_ADHPAbS04.html" target="_blank">PC</a>
-                        <a href="./mobile/06_UI_ADHPAbS04.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/06_UI_ADHPAbS04.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -329,11 +329,11 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 목록 없음</td>
                     <td>UI_ADHPAdM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/17_UI_ADHPAdM01.html" target="_blank">PC</a>
-                        <a href="./mobile/17_UI_ADHPAdM01.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/17_UI_ADHPAdM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -345,11 +345,11 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 목록 있음</td>
                     <td>UI_ADHPAdM02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/18_UI_ADHPAdM02.html" target="_blank">PC</a>
-                        <a href="./mobile/18_UI_ADHPAdM02.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/18_UI_ADHPAdM02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -361,11 +361,11 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 조회</td>
                     <td>UI_ADHPAdS03</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/19_UI_ADHPAdS03.html" target="_blank">PC</a>
-                        <a href="./mobile/19_UI_ADHPAdS03.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/19_UI_ADHPAdS03.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -377,11 +377,11 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 만족도 조사</td>
                     <td>UI_ADHPAdS04</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/20_UI_ADHPAdS04.html" target="_blank">PC</a>
-                        <a href="./mobile/20_UI_ADHPAdS04.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/20_UI_ADHPAdS04.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
