--- a/mobile/15_UI_ADHPAcS03.html
+++ b/mobile/15_UI_ADHPAcS03.html
@@ -80,6 +80,10 @@
                                         <dt>프로그램 종료일</dt>
                                         <dd>2025-12-31</dd>
                                     </div>
+                                    <div class="prog_group dl_time">
+                                        <dt>프로그램 운영시간</dt>
+                                        <dd>999시간 00분</dd>
+                                    </div>
                                     <div class="prog_group dl_edu">
                                         <dt>교육 방식</dt>
                                         <dd>대면</dd>
