--- a/pc/12_UI_ADHPAbP10.html
+++ b/pc/12_UI_ADHPAbP10.html
@@ -62,7 +62,7 @@
                                                 <h3 class="t2_sb">신청인 정보</h3>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
-                                                        <caption>성명, 전화번호, 이메일, 주소 을(를) 제공하는 표</caption>
+                                                        <caption>신청인 정보 : 성명, 전화번호, 이메일, 주소 을(를) 제공하는 표</caption>
                                                         <colgroup>
                                                             <col style="width:20%">
                                                             <col style="width:30%">
@@ -92,7 +92,7 @@
                                             <div class="box_group_wrap">
                                                 <h3 class="t2_sb">참여대학, 참여자 분류</h3>
                                                 <div class="box_table_wrap write type01">
-                                                    <table class="box_table"><caption>참여대학, 참여자 분류 을(를) 제공하는 표</caption>
+                                                    <table class="box_table"><caption>참여대학, 참여자 분류 : 참여대학, 참여자 분류 을(를) 제공하는 표</caption>
                                                         <colgroup>
                                                             <col style="width:20%">
                                                             <col style="width:30%">
@@ -151,7 +151,7 @@
                                                 <h3 class="t2_sb">학적정보</h3>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
-                                                        <caption>학번, 학년, 전공, 상태, 졸업(예정)년월 을(를) 제공하는 표</caption>
+                                                        <caption>학적정보 : 학번, 학년, 전공, 상태, 졸업(예정)년월 을(를) 제공하는 표</caption>
                                                         <colgroup>
                                                             <col style="width:20%">
                                                             <col style="width:30%">
@@ -348,7 +348,7 @@
                                                             <div class="radio_table">
                                                                 <p class="table_tit s1_sb">개인정보 수집·이용 내역</p>
                                                                 <table>
-                                                                    <caption>항목, 수집·이용 목적, 보유·이용 기간을(를) 제공하는 표</caption>
+                                                                    <caption>개인정보 수집·이용 내역 : 항목, 수집·이용 목적, 보유·이용 기간을(를) 제공하는 표</caption>
                                                                     <colgroup>
                                                                         <col style="width: auto;">
                                                                         <col style="width: 200px;">
@@ -431,7 +431,7 @@
                                                             <div class="radio_table">
                                                                 <p class="table_tit s1_sb">개인정보 수집·이용 내역</p>
                                                                 <table>
-                                                                    <caption>제공받는자, 항목, 제공 목적, 보유·이용 기간을(를) 제공하는 표</caption>
+                                                                    <caption>개인정보 수집·이용 내역 : 제공받는자, 항목, 제공 목적, 보유·이용 기간을(를) 제공하는 표</caption>
                                                                     <colgroup>
                                                                         <col style="width: 144px;">
                                                                         <col style="width: auto;">
