--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                     <td></td>
                     <td>참여신청서 - 회수(수정)</td>
                     <td>UI_ADHPAbS05</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/07_UI_ADHPAbS05.html" target="_blank">PC</a>
-                        <a href="./mobile/07_UI_ADHPAbS05.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/07_UI_ADHPAbS05.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -248,11 +248,11 @@
                     <td></td>
                     <td>개인정보 수집·이용·제공에 대한 동의서(참여자용)</td>
                     <td>UI_ADHPAbP10</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/12_UI_ADHPAbP10.html" target="_blank">PC</a>
-                        <a href="./mobile/12_UI_ADHPAbP10.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/12_UI_ADHPAbP10.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
