--- a/mobile/07_UI_ADHPAbS05.html
+++ b/mobile/07_UI_ADHPAbS05.html
@@ -162,7 +162,7 @@
                             </div>
 
 
-                                                        <div class="prog_wrap prog_applysummary box_group_wrap box_table_wrap">
+                            <div class="prog_wrap prog_applysummary box_group_wrap box_table_wrap">
                                 <h3 class="t2_sb mb16">신청 및 처리현황</h3>
                                 <div class="apply_summary_wrap" role="region">
                                     <div class="apply_summary_header">
@@ -251,7 +251,6 @@
                                                     <p class="status_date">2025-00-00</p>
                                                 </div>
                                             </li>
-                                       
                                         </ul>
                                         <div class="apply_summary_action secon_action">
                                             <button type="button" class="apply_summary_toggle" aria-expanded="tru" aria-controls="applySummaryDetail"><span>접기</span></button>
@@ -296,7 +295,7 @@
 
 
 
-                            <div class="box_group_wrap box_agm_wrap">
+                            <div class="box_group_wrap box_agm_wrap mt24">
                                 <h3 class="t2_sb req_mark">개인정보 이용에 대한 동의</h3>
                                 <div class="agm_area">
                                     <div class="agm_box">
@@ -337,6 +336,7 @@
                                 </div>
                                 <div class="btn_box mt24">
                                     <button type="button" class="btn large type03" aria-label="신청 목록 페이지로 이동" onclick="window.location.href=''">목록</button>
+                                    <button type="button" class="btn large type01" aria-label="" onclick="window.location.href=''">삭제</button>
                                     <button type="submit" id="srchBtn" class="btn large fill type01" onclick="">제출</button>
                                 </div>
                             </div>
