--- a/pc/05_UI_ADHPAbS03.html
+++ b/pc/05_UI_ADHPAbS03.html
@@ -243,7 +243,7 @@
                                                                 <td colspan="3">
                                                                     <span class="box_ipt new_ipt">
                                                                         <label for="gradDate" class="sr_only">졸업(예정) 년월</label>
-                                                                        <input type="text" onkeyup="" id="gradDate" name="gradDate" class="btnCalendar input_txt" placeholder="YYYY-MM">
+                                                                        <input type="text" onkeyup="" id="gradDate" name="gradDate" class="btnCalendar input_txt" title="졸업(예정) 년월 입력" placeholder="YYYY-MM">
                                                                         <button type="button" class="btn_calendar" aria-label="달력 선택"></button>
                                                                     </span>
                                                                 </td>
