--- a/pc/08_UI_ADHPAbP06.html
+++ b/pc/08_UI_ADHPAbP06.html
@@ -110,7 +110,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group" style="pointer-events: none;">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="new_radio_item">
+                                                                        <div class="single_radio_item">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                 <span class="radio_ui" aria-hidden="true"></span>
@@ -119,7 +119,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="new_radio_item">
+                                                                        <div class="single_radio_item">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                 <span class="radio_ui" aria-hidden="true"></span>
@@ -345,22 +345,16 @@
                                                         </colgroup>
                                                         <thead>
                                                             <tr>
-                                                            <th scope="col">선택</th>
-                                                            <th scope="col">대학교명</th>
-                                                            <th scope="col">소재지</th>
-                                                            <th scope="col">전화번호</th>
+                                                                <th scope="col">선택</th>
+                                                                <th scope="col">대학교명</th>
+                                                                <th scope="col">소재지</th>
+                                                                <th scope="col">전화번호</th>
                                                             </tr>
                                                         </thead>
                                                         <tbody>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ1" />
-                                                                        <label for="univ1">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">AAA 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>AAA 대학교</td>
                                                                 <td>대구광역시 달서구 달구벌대로 1095(신당동) 대학일자리플러스센터</td>
@@ -368,13 +362,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ2" />
-                                                                        <label for="univ2">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">BBB 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>BBB 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) BBB대학교</td>
@@ -382,13 +370,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ3" />
-                                                                        <label for="univ3">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">CCC 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>CCC 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) CCC대학교</td>
@@ -396,13 +378,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ4" />
-                                                                        <label for="univ4">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">DDD 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>DDD 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) DDD대학교</td>
@@ -410,13 +386,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ5" />
-                                                                        <label for="univ5">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">EEE 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>EEE 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) EEE대학교</td>
@@ -424,13 +394,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ6" />
-                                                                        <label for="univ6">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">FFF 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>FFF 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) FFF대학교</td>
@@ -438,13 +402,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ7" />
-                                                                        <label for="univ7">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">GGG 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>GGG 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) GGG대학교</td>
@@ -452,13 +410,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ8" />
-                                                                        <label for="univ8">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">HHH 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>HHH 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) HHH대학교</td>
@@ -466,13 +418,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ9" />
-                                                                        <label for="univ9">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">III 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>III 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) III대학교</td>
@@ -480,13 +426,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="new_radio_item">
-                                                                        <input type="radio" name="univSelect" id="univ10" />
-                                                                        <label for="univ10">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">JJJ 대학교 선택</span>
-                                                                        </label>
-                                                                    </div>
+                                                                    <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                                                 </td>
                                                                 <td>JJJ 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) JJJ대학교</td>
