--- a/pc/14_UI_ADHPAcM02.html
+++ b/pc/14_UI_ADHPAcM02.html
@@ -241,7 +241,7 @@
                                                                             <div class="cell">
                                                                                 <span class="box_ipt w_small">
                                                                                     <label for="schRcptStdte" class="sr_only">등록 시작일</label>
-                                                                                    <input type="text" onkeyup="fn_selfInput(this)" id="schRcptStdte" name="schRcptStdte" class="btnCalendar input_txt hasDatepicker" placeholder="YYYY-MM-DD" inputmode="numeric">
+                                                                                    <input type="text" onkeyup="fn_selfInput(this)" id="schRcptStdte" name="schRcptStdte" class="btnCalendar input_txt hasDatepicker" placeholder="YYYY-MM-DD" inputmode="numeric" title="시작일 입력">
                                                                                     <button type="button" class="btn_calendar ui-datepicker-trigger" aria-label="등록 시작일 달력 선택"></button>
                                                                                 </span>
                                                                             </div>
@@ -249,7 +249,7 @@
                                                                             <div class="cell">
                                                                                 <span class="box_ipt w_small">
                                                                                     <label for="schRcptEndte" class="sr_only">등록 종료일</label>
-                                                                                    <input type="text" onkeyup="fn_selfInput(this)" id="schRcptEndte" name="schRcptEndte" class="btnCalendar input_txt hasDatepicker" placeholder="YYYY-MM-DD" inputmode="numeric">
+                                                                                    <input type="text" onkeyup="fn_selfInput(this)" id="schRcptEndte" name="schRcptEndte" class="btnCalendar input_txt hasDatepicker" placeholder="YYYY-MM-DD" inputmode="numeric" title="종료일 입력">
                                                                                     <button type="button" class="btn_calendar ui-datepicker-trigger" aria-label="등록 종료일 달력 선택"></button>
                                                                                 </span>
                                                                             </div>
