--- a/pc/01_UI_ADHPAaM01.html
+++ b/pc/01_UI_ADHPAaM01.html
@@ -371,7 +371,7 @@
                                                         <p class="t3_sb">나의 신청현황을 확인하실 수 있습니다.</p>
                                                     </div>
                                                 </div>
-                                                <button type="button" aria-labelledby="btnStatusDesc statusDescTitle" aria-describedby="statusDescText" id="btnStatusDesc" onclick="">나의 신청현황 보기</button>
+                                                <button type="button" id="statusDescText" onclick="">나의 신청현황 보기</button>
                                             </div>
                                         </div>
                                     </div>
