--- a/pc/02_UI_ADHPAaM02.html
+++ b/pc/02_UI_ADHPAaM02.html
@@ -534,7 +534,8 @@
                                                                     <td class="new_th">운영 기간</td>
                                                                     <td colspan="3">
                                                                         <fieldset class="form_box">
-                                                                            <legend class="sr_only">조회 기간 선택 및 날짜 입력</legend>
+                                                                            <legend>조회 기간 선택 및 날짜 입력</legend>
+
                                                                             <div class="date_select">
                                                                                 <label for="newDate" class="sr_only">조회 기간 선택</label>
                                                                                 <select id="newDate" name="period">
@@ -548,7 +549,7 @@
                                                                                 <div class="cell">
                                                                                     <span class="box_ipt w_small">
                                                                                         <label for="schRcptStdte" class="sr_only">시작일</label>
-                                                                                        <input type="text" id="schRcptStdte" name="schRcptStdte" class="btnCalendar input_txt hasDatepicker" placeholder="YYYY-MM-DD">
+                                                                                        <input type="text" id="schRcptStdte" name="schRcptStdte" class="btnCalendar input_txt hasDatepicker" title="시작일 입력" placeholder="YYYY-MM-DD">
                                                                                         <button type="button" class="btn_calendar ui-datepicker-trigger" aria-label="시작일 달력 선택"></button>
                                                                                     </span>
                                                                                 </div>
@@ -556,20 +557,21 @@
                                                                                 <div class="cell">
                                                                                     <span class="box_ipt w_small">
                                                                                         <label for="schRcptEndte" class="sr_only">종료일</label>
-                                                                                        <input type="text" id="schRcptEndte" name="schRcptEndte" class="btnCalendar input_txt hasDatepicker" placeholder="YYYY-MM-DD">
+                                                                                        <input type="text" id="schRcptEndte" name="schRcptEndte" class="btnCalendar input_txt hasDatepicker" title="종료일 입력" placeholder="YYYY-MM-DD">
                                                                                         <button type="button" class="btn_calendar ui-datepicker-trigger" aria-label="종료일 달력 선택"></button>
                                                                                     </span>
                                                                                 </div>
                                                                             </div>
                                                                         </fieldset>
+
                                                                         <ul class="from_btn_box">
-                                                                            <li class=""><button type="button" value="clear">초기화</button></li>
-                                                                            <li class=""><button type="button" value="today">오늘</button></li>
-                                                                            <li class=""><button type="button" value="1week">일주일</button></li>
-                                                                            <li class="active"><button type="button" value="1month">1개월</button></li>
-                                                                            <li class=""><button type="button" value="3month">3개월</button></li>
-                                                                            <li class=""><button type="button" value="6month">6개월</button></li>
-                                                                            <li class=""><button type="button" value="1year">1년</button></li>
+                                                                            <li><button type="button" value="clear" aria-selected="false">초기화</button></li>
+                                                                            <li><button type="button" value="today" aria-selected="false">오늘</button></li>
+                                                                            <li><button type="button" value="1week" aria-selected="false">일주일</button></li>
+                                                                            <li class="active"><button type="button" value="1month" aria-selected="true" >1개월</button></li>
+                                                                            <li><button type="button" value="3month" aria-selected="false">3개월</button></li>
+                                                                            <li><button type="button" value="6month" aria-selected="false">6개월</button></li>
+                                                                            <li><button type="button" value="1year" aria-selected="false">1년</button></li>
                                                                         </ul>
                                                                     </td>
                                                                 </tr>
