--- a/pc/19_UI_ADHPAdS03.html
+++ b/pc/19_UI_ADHPAdS03.html
@@ -114,77 +114,77 @@
                                                                 <div class="form_box down_box">
                                                                     <ul>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file word"><i class="blind">Word 파일</i></span>
                                                                                 <p>워드워드워드워드.doc</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file excel"><i class="blind">Excel 파일</i></span>
                                                                                 <p>엑셀엑셀엑셀엑셀.xls</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file pdf"><i class="blind">PDF 파일</i></span>
                                                                                 <p>피디에프피디에프.pdf</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file ai"><i class="blind">Illustrator 파일</i></span>
                                                                                 <p>일러일러일러일러.ai</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file file_zip"><i class="blind">압축 파일</i></span>
                                                                                 <p>압축압축압축압축.zip</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file img_file"><i class="blind">이미지 파일</i></span>
                                                                                 <p>이미지이미지이미지.png</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file mov"><i class="blind">동영상 파일</i></span>
                                                                                 <p>동영상동영상동영상.mp4</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file powerpoint"><i class="blind">PPT 파일</i></span>
                                                                                 <p>피피티피피티피피티.ppt</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file hw_file"><i class="blind">한글 파일</i></span>
                                                                                 <p>한글한글한글한글.hwp</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file psd"><i class="blind">포토샵 파일</i></span>
                                                                                 <p>포토샵포토샵포토샵.psd</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li>
-                                                                            <a href="#none" onclick="">
+                                                                            <a href="#none" download="">
                                                                                 <span class="ico24_file word"><i class="blind">Word 파일</i></span>
                                                                                 <p>TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST.doc</p>
                                                                                 <span class="down"><i class="blind">다운로드</i></span>
