--- a/pc/06_UI_ADHPAbS04.html
+++ b/pc/06_UI_ADHPAbS04.html
@@ -384,7 +384,7 @@
 
         </div>
         <script src="../pc/js/include.js"></script>
-        <script src="../pc/js/contents.js"></script>
+        <script src="../pc/js/include_share.js"></script>        <script src="../pc/js/contents.js"></script>
 </body>
 
 </html>
