--- a/pc/12_UI_ADHPAbP10.html
+++ b/pc/12_UI_ADHPAbP10.html
@@ -586,6 +586,6 @@
 
         </div>
         <script src="../pc/js/include.js"></script>
-        <script src="../pc/js/contents.js"></script>
+        <script src="../pc/js/include_share.js"></script>        <script src="../pc/js/contents.js"></script>
 </body>
 </html>
