--- a/pc/02_UI_ADHPAaM02.html
+++ b/pc/02_UI_ADHPAaM02.html
@@ -891,6 +891,6 @@
 
         </div>
         <script src="../pc/js/include.js"></script>
-        <script src="../pc/js/contents.js"></script>
+        <script src="../pc/js/include_share.js"></script>        <script src="../pc/js/contents.js"></script>
 </body>
 </html>
